SERVER-9850 Disable logging in the Client destructor